--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "lightningcss": "^1.30.2",
     "postcss": "^8.5.6",
     "vite": "^5.2.0"
   }
