--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,8 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "lightningcss": "^1.30.2",
     "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "vite": "^5.2.0"
   }
 }
