done blog frontend

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=https://blog-generate-backend-slus.onrender.com
+VITE_API_URL=https://blog-generate-backend.onrender.comg
 NODE_VERSION=22.16.0
