--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=https://blog-generate-backend.onrender.comg
+VITE_API_URL=https://blog-generate-backend.onrender.com
 NODE_VERSION=22.16.0
